--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,168 @@
+.main-body{
+    /* max-width: 1044px; */
+    width: 100%;
+    
+    flex-direction: column;
+    margin: auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* display: flex; */
+    /* justify-content: space-between; */
+}
+
 .header1{
     text-align: center;
     color: red;
 }
-.navbar{
+.top-bar{
     /*width: 1000px;*/
-    height: 100px;
-    
-    
-    border-bottom-color: red;
+    height: 80px;
+    border-width: 0px;
+    /* position: fixed; */
+    /* left: 0;
+    right: 0; */
+    max-width: 1024px;
+    width: 100%;
+    margin: auto;
+    top: 0;
+    border-bottom-style: solid;
+    border-bottom-color: silver;
+    border-bottom-width: 1px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    background-color: white;
+    color: white;
+    padding-bottom: 10px;
+    /* padding-left: 10px;
+    padding-right: 10px; */
+}
 
-    border-color: red;
+.top-bar-left{
+    font-size: 40px;
+    color: black;
+    
+    font-weight: 500;
+    width: 100%;
+    max-width: 400px;
+    margin-left: 10px;
+}
+.top-bar-right{
+    font-size: 20px;
+    font-weight: 400;
+    display: flex;
+    max-width: 200px;
+    min-width: 150px;
+    width: 200px;
+    justify-content: space-between;
+    color: darkgray;
 
-    background-color: aqua;
-    color: red;
+    margin-top: 10px;
+    margin-right: 10px;
+    
+}
+.top-bar-link:link{
+    color: darkgray;
+    text-decoration: none;
+}
+.top-bar-linl:visited{
+    color: darkgray;
+    text-decoration: none;
+}
+.top-bar-link:hover{
+    color: black;
+    text-decoration: none;
+}
+.top-bar-link:active{
+    color: darkgray;
+    text-decoration: none;
+}
+
+.top-bar-link{
+
+    color:  darkgray;
+}
+
+.main-container{
+    max-width: 1000px;
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    grid-auto-flow: row;
+    grid-auto-rows: 300px;
+    grid-gap: 10px;
+    /* flex-wrap: wrap; */
+    /* margin-top: 20px; */
+}
+.main-container-item1{
+    grid-column: auto;
+    grid-row: auto;
+}
+.main-container-item2{
+    grid-column: auto;
+    grid-row: auto;
+}
+.main-container-item3{
+    grid-column: auto;
+    grid-row: auto;
+}
+
+.flag-pic{
+    margin-top: 20px;
+    margin:auto;
+    max-width: 720px;
+    width: auto;
+}
+#pic1{
+    max-width: 100%;
+    height: auto;
+}
+
+.sub-container{
+    height: 100%;
+    
+    /* border-bottom-style: solid;
+    border-bottom-color: darkgray;
+    border-bottom-width: 2px;
+    border-right-style: solid;
+    border-right-color: darkgray;
+    border-right-width: 2px; */
+
+    /* border-top-color: lightgray;
+    border-top-width: 1px;
+    border-left-color: lightgray;
+    border-left-width: 1px; */
+
+    border-radius: 10px;
+    
+
+    margin: auto;
+}
+#the-left-one{
+    background-color: #f1c4cd;
+}
+#the-middle-one{
+    background-color: #b2cf87;
+}
+
+#the-right-one{
+    background-color: #c3d7df;
+}
+
+.foot-bar{
+    background-color: #363433;    
+    margin: auto;
+    margin-top: 20px;
+    width:100%;
+    height: 180px;
+    display: flex;
+}
+
+
+.foot-note-middle{
+    margin: auto;
+    margin-top: 5px;
+    color: azure;
+    text-align: center;
+    font-size: 15px;
 }
