--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
 .main-body{
-    /* max-width: 1044px; */
     width: 100%;
     background-color: white;
     flex-direction: column;
     margin: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* display: flex; */
-    /* justify-content: space-between; */
+    word-wrap: break-word;
 }
 
 .header1{
@@ -14,12 +12,8 @@
     color: red;
 }
 .top-bar{
-    /*width: 1000px;*/
     height: 80px;
     border-width: 0px;
-    /* position: fixed; */
-    /* left: 0;
-    right: 0; */
     max-width: 1024px;
     width: 100%;
     margin: auto;
@@ -33,8 +27,6 @@
     background-color: white;
     color: white;
     padding-bottom: 10px;
-    /* padding-left: 10px;
-    padding-right: 10px; */
 }
 
 .top-bar-left{
@@ -61,25 +53,23 @@
     
 }
 .top-bar-link:link{
-    color: darkgray;
+    color: #363433;
     text-decoration: none;
 }
 .top-bar-linl:visited{
-    color: darkgray;
+    color: #363433;
     text-decoration: none;
 }
 .top-bar-link:hover{
-    color: black;
+    color: #363433;
     text-decoration: none;
 }
 .top-bar-link:active{
     color: darkgray;
     text-decoration: none;
 }
-
 .top-bar-link{
-
-    color:  darkgray;
+    color: #363433;
 }
 
 .main-container{
@@ -91,8 +81,6 @@
     grid-auto-flow: row;
     grid-auto-rows: 300px;
     grid-gap: 10px;
-    /* flex-wrap: wrap; */
-    /* margin-top: 20px; */
 }
 .main-container-item1{
     grid-column: auto;
@@ -120,29 +108,16 @@
 
 .sub-container{
     height: 100%;
-    
-    /* border-bottom-style: solid;
-    border-bottom-color: darkgray;
-    border-bottom-width: 2px;
-    border-right-style: solid;
-    border-right-color: darkgray;
-    border-right-width: 2px; */
-
-    /* border-top-color: lightgray;
-    border-top-width: 1px;
-    border-left-color: lightgray;
-    border-left-width: 1px; */
-
     border-radius: 10px;
-    
-
     margin: auto;
+    display: flex;
+    flex-flow: column;
 }
 #the-left-one{
     background-color: #f1c4cd;
 }
 #the-middle-one{
-    background-color: #b2cf87;
+    background-color: #c6dfc8;
 }
 
 #the-right-one{
@@ -166,3 +141,76 @@
     text-align: center;
     font-size: 15px;
 }
+
+.container-title{
+    color: white;
+    width: 300px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 25px;
+    margin: auto;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+#container-title1{
+    /* border-bottom-color:#f07c82; */
+    /* border-bottom-color: white; */
+}
+#container-title2{
+    /* border-bottom-color:#83a78d; */
+    /* border-bottom-color: white; */
+}
+#container-title3{
+    /* border-bottom-color:#66a9c9; */
+    /* border-bottom-color: white; */
+}
+.container-footer{
+    color: white;
+    width: 300px;
+    text-align: right;
+    font-weight: 500;
+    font-size: 20px;
+    margin: auto;
+    margin-bottom: 10px;
+    padding-top: 10px; 
+}
+.container-link:link{
+    color: white;
+    text-decoration: none;
+}
+.container-link:visited{
+    color: white;
+    text-decoration: none;
+}
+.container-link:hover{
+    color: white;
+    text-decoration: none;
+}
+.container-link:active{
+    color: #363433;
+    text-decoration: none;
+}
+
+.container-content{
+    width: 300px;
+    height: 180px;
+    /* display: grid;
+    grid-auto-columns: 300px;
+    grid-template: repeat(2,1fr); */
+    color: #363433;
+    font-size: 20px;
+    margin: auto;
+    border-top-style: solid;
+    border-top-color: white;
+    border-top-width: 2px;
+    border-bottom-style: solid;
+    border-bottom-color: white;
+    border-bottom-width: 2px;
+}
+/* .container-item1{
+    grid-row: 1;
+    border-bottom-style: solid;
+    border-bottom-color: white;
+    border-bottom-width: 1px;
+    
+} */
