--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,9 @@
     margin: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     word-wrap: break-word;
+    min-width: 720px;
 }
 
-.header1{
-    text-align: center;
-    color: red;
-}
 .top-bar{
     height: 80px;
     border-width: 0px;
@@ -152,18 +149,6 @@
     margin-top: 10px;
     padding-bottom: 10px;
 }
-#container-title1{
-    /* border-bottom-color:#f07c82; */
-    /* border-bottom-color: white; */
-}
-#container-title2{
-    /* border-bottom-color:#83a78d; */
-    /* border-bottom-color: white; */
-}
-#container-title3{
-    /* border-bottom-color:#66a9c9; */
-    /* border-bottom-color: white; */
-}
 .container-footer{
     color: white;
     width: 300px;
@@ -194,9 +179,6 @@
 .container-content{
     width: 300px;
     height: 180px;
-    /* display: grid;
-    grid-auto-columns: 300px;
-    grid-template: repeat(2,1fr); */
     color: #363433;
     font-size: 20px;
     margin: auto;
@@ -207,10 +189,118 @@
     border-bottom-color: white;
     border-bottom-width: 2px;
 }
-/* .container-item1{
-    grid-row: 1;
-    border-bottom-style: solid;
-    border-bottom-color: white;
-    border-bottom-width: 1px;
+
+.intro-layout{
+    max-width: 1000px;
+    width: 100%;
+    height: 660px;
+    margin: auto;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 10px;
+    /* background-image: url("./src/absolution.jpg");
+    background-size: cover;
+    background-attachment: fixed; */
+    overflow: hidden;
     
-} */
+    
+}
+
+.intro-part1{
+    position: relative;
+    min-width: 225px;
+    grid-column: 1;
+    grid-row: 1/3;
+    border-radius: 10px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: darkgray;
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-right-color: darkgray;
+    z-index: 1;
+    overflow: hidden;
+    /* filter: blur(4px); */
+}
+.intro-part1::before{
+    content: '';
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    
+    background-image: url("./src/absolution.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    
+    z-index:-1;
+    filter: blur(5px);
+    margin: -5px;
+    
+}
+.intro-part2{
+    position: relative;
+    min-width: 450px;
+    grid-column: 2/5;
+    grid-row: 1/3;
+    border-radius: 10px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: darkgray;
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-right-color: darkgray;
+    z-index: 1;
+    overflow: hidden;
+    /* filter: blur(4px);  */
+}
+.intro-part2::before{
+    content: '';
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    
+    background-image: url("./src/absolution.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    
+    z-index:-1;
+    filter: blur(5px);
+    margin: -5px;
+    
+}
+.intro-part3{
+    position: relative;
+    min-width: 685px;
+    grid-column: 1/5;
+    grid-row: 3;
+    border-radius: 10px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: darkgray;
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-right-color: darkgray;
+    z-index: 1;
+    overflow: hidden;
+}
+.intro-part3::before{
+    content: '';
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    
+    background-image: url("./src/absolution.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    z-index:-1;
+    filter: blur(5px);
+    margin: -5px;
+}
