--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     word-wrap: break-word;
     min-width: 720px;
     overflow: visible;
+    display: flex;
 }
 
 .top-bar{
@@ -69,7 +70,16 @@
 .top-bar-link{
     color: #363433;
 }
-
+.title1{
+    max-width: 1000px;
+    width: 100%;
+    margin: auto;
+    display: grid;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+    color: #363433;
+}
 .main-container{
     max-width: 1000px;
     width: 100%;
@@ -202,13 +212,8 @@
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 10px;
-    /* background-image: url("./src/absolution.jpg");
-    background-size: cover;
-    background-attachment: fixed; */
     color: azure;
     font-size: 20px;
-    
-    
 }
 
 .intro-part1{
@@ -360,4 +365,176 @@
 .contact-link:active{
     color: #363433;
     text-decoration: none;
+}
+.timeline-container{
+    max-width: 1000px;
+    width: 100%;
+    min-width: 720px;
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.timeline-item{
+    max-width: 1000px;
+    width: 100%;
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+
+
+.timeline-article{
+    height: 240px;
+    max-width: 1000px;
+    min-width: 720px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(1,1fr);
+    grid-gap: 10px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+
+.timeline-article-right{
+    grid-column: 2/6;
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(8,1fr);
+    border-radius: 10px;
+    z-index: 1;
+    overflow: hidden;
+    position: relative;
+}
+.timeline-article-right::before{
+    content: '';
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    
+    background-image: url("./src/brain.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    z-index:-1;
+    filter: blur(5px);
+    margin: -5px;
+}
+
+.timeline-article-sidebar{
+    border-right-style: solid;
+    border-right-width: 5px;
+    border-right-color: #363433;
+    grid-column: 1;
+    grid-row:1;
+    color: #363433;
+    font-size: 40px;
+    font-weight: 600;
+    text-align: right;
+    display: block;
+    padding-right: 5px;
+    padding-top: 10px;
+    margin-top: -5px;
+    margin-bottom: -5px;
+}
+.timeline-article-topbar{
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: gray;
+    grid-column:1;
+    grid-row:1/3;
+    color: white;
+    font-size: 25px;
+    font-weight: 500;
+    position: relative;
+    align-self: center;
+    line-height: 40px;
+    padding-left: 10px;
+}
+.timeline-article-footbar{
+    grid-column:1;
+    grid-row:8;
+    color: silver;
+    align-self: auto;
+    text-align: right;
+    padding-right: 10px;
+    
+}
+.timeline-article-main{
+    grid-column: 1;
+    grid-row:3/8;
+    color: silver;
+    font-size: 15px;
+    padding-left: 10px;
+}
+.timeline-timestamp{
+    margin-left: 100px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #363433;
+    margin-bottom: 5px;
+}
+.timeline-article-link{
+    color: white;
+    text-decoration: none;
+}
+.timeline-article-link:link{
+    color: white;
+    text-decoration: none;
+}
+.timeline-article-link:visited{
+    color: silver;
+    text-decoration: none;
+}
+.timeline-article-link:hover{
+    color: white;
+    text-decoration: none;
+}
+.timeline-article-link:active{
+    color: white;
+    text-decoration: none;
+}
+.article-title1{
+    color: #363433;
+    font-size: 32px;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.article-title2{
+    color: #e0d3cc;
+    font-size: 28px;
+    font-weight: 600;
+    margin-top: 6px;
+}
+.article-title3{
+    color: #363433;
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 2px;
+}
+.article-title4{
+    color: #363433;
+    font-size: 22px;
+    font-weight: 600;
+}
+.article-main{
+    max-width: 1000px;
+    width: 100%;
+    min-width: 720px;
+    min-height: 720px;
+    word-wrap: break-word;
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+    position: relative;
+    margin: auto;
+    margin-top: 20px;
 }
