--- a/styles.css
+++ b/styles.css
@@ -347,8 +347,58 @@
     font-weight: 400;
     text-align: center; 
 }
+.logo-icon{
+    position: relative;
+    margin: auto;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+.contact-info{
+    display: grid;
+    margin-top: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-row-gap: 5px;
+    width: 220px;
+}
+#logo-icon-github{
+    grid-row: 1;
+    grid-column: 1;
+}
+#contact-via-github{
+    grid-row: 1;
+    grid-column: 2/5;
+}
+#logo-icon-email{
+    grid-row: 2;
+    grid-column: 1;
+}
+#contact-via-email{
+    grid-row: 2;
+    grid-column: 2/5;
+}
+#logo-icon-steam{
+    grid-row: 3;
+    grid-column: 1;
+}
+#contact-via-steam{
+    grid-row: 3;
+    grid-column: 2/5;
+}
+#logo-icon-alipay{
+    grid-row: 4;
+    grid-column: 1;
+}
+#contact-via-alipay{
+    grid-row: 4;
+    grid-column: 2/5;
+}
+
 .contact-link{
     color: azure;
+    margin-left: 0;
+    margin-right: auto; 
 }
 .contact-link:link{
     color: azure;
